# dotfiles

./: .Xresources  .gitconfig  .gitignore  .gitmodules  .latexmkrc  .p10k.zsh  .setup.sh  .tmux.conf  .vimrc  .xinitrc  .xmobarrc  .zshrc  README.md  install.sh  test
.config/: picom.conf
.config/X11/: nvidia-xinitrc
.config/brittany/: config.yaml
.config/colorls/: dark_colors.yaml
.config/deadd/: deadd.conf
.config/dunst/: dunstrc
.config/i3/: config
.config/i3blocks/: config
.config/kitty/: kitty.conf  open-actions.conf
.config/nvim/: coc-settings.json  init.lua  init.vim  lazy-lock.json  test
.config/polybar/: config
.config/rofi/: config  config.rasi  theme.rasi
.config/scripts/: bandwidth  brightness  cpu  date  disk  lock  screen  start_polybar  startup  temp  toggle_graphics  trayer_padding  volume  xsettings
.config/system/: alias.sh  export.sh  function.sh
.config/vifm/: vifm-help.txt  vifminfo  vifmrc
.config/xmonad/: .xinitrc  hie.yaml  myXmonad.cabal  package.yaml  stack.yaml  (+1 more)
.resources/: hasklo.vim
.vim/: .netrwhist  coc-settings.json
.vimdir/: .vimrc  plugins.vim
.xmonad/: .gitignore  LICENSE  README.md  build  myXmonad.cabal  package.yaml  prompt-history  stack.yaml  xmonad.errors  xmonad.hs
.xmonad/src/: xmonad.hs
git/: .gitconfig  .gitignore_global
i3/: config
i3blocks/: config
kitty/: kitty.conf
scripts/: battery  cpu  disk  memory  temp  volume
system/: .alias  .export  .function  alias.sh  export.sh  function.sh
vim/: .vimrc
vis/: config
zsh/: .zshrc  ohmyzsh-setup.sh  zplug-setup.sh
(+109 files in other folders)
